--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -21,6 +21,8 @@ and open the template in the editor.
                 <ul class="nav" role="navigation">
                     <li>
                         <a href="#users">Users</a>
+                         <a href="#file/new">Files</a>
+                         <a href="#datasourcer">DataSources</a>
                     </li>
                 </ul>
             </div>
@@ -32,6 +34,7 @@ and open the template in the editor.
 <script src="js/angular.min.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/angular-resource.js"></script>
+<script src="js/fileUpload.js"></script>
 <script src="js/toastr.js"></script>
 <script src="js/massmailer.js"></script>
 
