--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -65,10 +65,11 @@ and open the template in the editor.
 <script src="js/angular-route.min.js"></script>
 <script src="js/angular-resource.js"></script>
 <script src="js/massmailer.js"></script>
-<script src="js/ngconfig.js"></script>
+<script src="js/datasource.js"></script>
 <script src="js/fileUpload.js"></script>
 <script src="js/entityService.js"></script>
 <script src="js/users.js"></script>
+
 <script src="js/ngdirectives.js"></script>
 <script src="js/toastr.js"></script>
 <script src="js/massmailer.js"></script>
