--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -64,6 +64,8 @@ and open the template in the editor.
 <script src="js/angular.min.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/angular-resource.js"></script>
+<script src="js/ui-bootstrap-tpls-0.10.0.min.js"></script>
+
 <script src="js/massmailer.js"></script>
 <script src="js/datasource.js"></script>
 <script src="js/fileUpload.js"></script>
