--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -8,6 +8,7 @@ and open the template in the editor.
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
+        <link rel="stylesheet" href="css/custom.css"/>
     <link rel="stylesheet" href="css/toastr.css"/>
 
     <style>
