--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -16,45 +16,60 @@ and open the template in the editor.
         </style>
         <title>MassMailer</title>
     </head>
-    <body>
-        <div class="container"> 
+    <body >
+        <div class="container-fluid"  > 
             <div class="row">
-                <div class="col-md-2" >
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="row" style="background-color: #fff">
+                        <div class="col-md-2">  <img src="img/livelogo.png" alt="..." class="img-rounded"> </div>
+                        <div >  
+                            <div class="page-header">
+                                
+                                <h1>MassMailler <small>Just send it !</small></h1>
 
-                    <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a href="#datasource">DataSources</a></li>
-                        <li><a href="#campain">Kampaně</a></li>
-                        <li><a href="#datasource">Další</a></li>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" >
+                        <div class="col-md-2" ng-controller="MenuCtrl" style="background-color: #e1edf7" >
 
+                            <ul class="nav nav-pills nav-stacked">
+                                <li ng-class="getClass('/datasource')"  ><a href="#datasource">DataSources</a></li>
+                                <li ng-class="getClass('/campain')"  ><a href="#campain">Kampaně</a></li>
+                                <li ng-class="getClass('/other')"  ><a href="#datasource">Další</a></li>
 
-                    </ul>
-                </div><!-- /.navbar-collapse -->
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
 
-                <div class="col-md-10" >
+                        <div class="col-md-10" >
 
-                    <div  ng-view>
+                            <div  ng-view>
 
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-            <script src="https://code.jquery.com/jquery.js"></script>
-            <script src="js/bootstrap.js"></script>
-            <script src="js/angular.min.js"></script>
-            <script src="js/angular-route.min.js"></script>
-            <script src="js/angular-resource.js"></script>
-            <script src="js/ui-bootstrap-tpls-0.10.0.min.js"></script>
 
-            <script src="js/massmailer.js"></script>
-            <script src="js/datasource.js"></script>
-                      <script src="js/campain.js"></script>
-            <script src="js/fileUpload.js"></script>
-            <script src="js/entityService.js"></script>
-            <script src="js/users.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/angular.min.js"></script>
+        <script src="js/angular-route.min.js"></script>
+        <script src="js/angular-resource.js"></script>
+        <script src="js/ui-bootstrap-tpls-0.10.0.min.js"></script>
 
-            <script src="js/ngdirectives.js"></script>
-            <script src="js/toastr.js"></script>
-            <script src="js/massmailer.js"></script>
+        <script src="js/massmailer.js"></script>
+        <script src="js/menu.js"></script>
+        <script src="js/datasource.js"></script>
+        <script src="js/campain.js"></script>
+        <script src="js/fileUpload.js"></script>
+        <script src="js/entityService.js"></script>
+        <script src="js/users.js"></script>
+
+        <script src="js/ngdirectives.js"></script>
+        <script src="js/toastr.js"></script>
+        <script src="js/massmailer.js"></script>
 
     </body>
 </html>
