--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -36,7 +36,8 @@ and open the template in the editor.
 
                             <ul class="nav nav-pills nav-stacked">
                                 <li ng-class="getClass('/datasource')"  ><a href="#datasource">DataSources</a></li>
-                                <li ng-class="getClass('/campain')"  ><a href="#campain">Kampaně</a></li>
+                                <li ng-class="getClass('/campain/new')"  ><a href="#campain/new">Nová kampaň</a></li>
+                                <li ng-class="getClass('/campains')"  ><a href="#campains">Kampaně</a></li>
                                 <li ng-class="getClass('/other')"  ><a href="#datasource">Další</a></li>
 
                             </ul>
