--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -25,10 +25,9 @@ and open the template in the editor.
             <div class="row">
                 <div class=" col-lg-11 col-lg-offset-1 clearfix">
                     <ul class="nav nav-pills">
-                        <li   ng-class="getClass('/datasource')"><a href="#datasource">DataSources</a></li>
-                        <li ng-class="getClass('/campain/new')"  ><a href="#campain/new">Nová kampaň</a></li>
-                        <li ng-class="getClass('/campains')"  ><a href="#campains">Kampaně</a></li>
-                        <li ng-class="getClass('/other')"  ><a href="#datasource">Další</a></li>
+                        <li   ng-class="getClass('/datasource')"><a href="#datasource">Datové zdroje</a></li>
+                        <li ng-class="getClass('/campain/new')"  ><a href="#campains">Hromadné emaily</a></li>
+                        <li ng-class="getClass('/campains')"  ><a href="#campains">Statistiky</a></li>
 
                     </ul>
                 </div>
