--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -18,12 +18,13 @@
 
         <!-- SB Admin CSS - Include with every page -->
         <link href="css/sb-admin.css" rel="stylesheet">
+         <link href="css/custom.css" rel="stylesheet">
 
     </head>
 
     <body>
 
-        <div id="wrapper">
+        <div id="wrapper" >
 
             <nav ng-controller="MenuCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
@@ -58,9 +59,9 @@
                 </ul>
                 <!-- /.navbar-top-links -->
 
-                <div class="navbar-inverse navbar-static-side" role="navigation">
-                    <div class="sidebar-collapse">
-                        <ul class="nav " id="side-menu">
+                <div class="navbar-static-side" role="navigation">
+                    <div class="sidebar-collapse ">
+                        <ul class="nav" id="side-menu">
 
                             <li>
                                 <a href="#datasource"><i class="fa fa-table fa-fw"></i>Datové zdroje<span class="fa"></span></a>
@@ -72,13 +73,13 @@
                                 <ul class="nav nav-second-level">
                    
                                     <li>
-                                        <a href="#campains/type/dashboard">Rozpracované</a>
+                                        <a href="#campains/type/EDIT">Rozpracované</a>
                                     </li>
                                     <li>
-                                        <a href="buttons.html">Odesílané</a>
+                                        <a href="#campains/type/SENDING">Odesílané</a>
                                     </li>
                                     <li>
-                                        <a href="notifications.html">Odeslané</a>
+                                        <a href="#campains/type/SENT" >Odeslané</a>
                                     </li>
 
                                 </ul>
