--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -18,7 +18,7 @@
 
         <!-- SB Admin CSS - Include with every page -->
         <link href="css/sb-admin.css" rel="stylesheet">
-         <link href="css/custom.css" rel="stylesheet">
+        <link href="css/custom.css" rel="stylesheet">
 
     </head>
 
@@ -71,7 +71,7 @@
                             <li>
                                 <a href="#campains/dashboard"><i class="fa fa-wrench fa-fw"></i>Kampaně<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
-                   
+
                                     <li>
                                         <a href="#campains/type/EDIT">Rozpracované</a>
                                     </li>
@@ -130,6 +130,7 @@
         <script src="js/menu.js"></script>
         <script src="js/datasource.js"></script>
         <script src="js/campain.js"></script>
+        <script src="js/email.js"></script>
         <script src="js/fileUpload.js"></script>
         <script src="js/entityService.js"></script>
         <script src="js/users.js"></script>
