--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -76,7 +76,7 @@
                                         <a href="#campains/type/EDIT">Rozpracované</a>
                                     </li>
                                     <li>
-                                        <a href="#campains/type/SENDING">Odesílané</a>
+                                        <a href="#campains/type/INPROGRES">Odesílané</a>
                                     </li>
                                     <li>
                                         <a href="#campains/type/SENT" >Odeslané</a>
