--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Massmaller</a>
+                    <a class="navbar-brand" href="index.html"><h1>Massmaller</h1></a>
                 </div>
                 <!-- /.navbar-header -->
 
@@ -69,75 +69,76 @@
                             </li>
 
                             <li>
-                                <a href="#campains/dashboard"><i class="fa fa-wrench fa-fw"></i>Kampaně<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
+                                <a href="#campains/type/EDIT" > <i class="fa fa-wrench fa-fw"></i>Kampaně</a>
 
-                                    <li>
-                                        <a href="#campains/type/EDIT">Rozpracované</a>
-                                    </li>
-                                    <li>
-                                        <a href="#campains/type/INPROGRES">Odesílané</a>
-                                    </li>
-                                    <li>
-                                        <a href="#campains/type/SENT" >Odeslané</a>
-                                    </li>
+                                        </li>
 
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
+                                        <li>
+                                            <a href="#campains/type/EDIT" style="padding-left: 3em; font-size: 0.9em">Rozpracované</a>
+                                        </li>
+                                        <li>
+                                            <a href="#campains/type/INPROGRES" style="padding-left: 3em; font-size: 0.9em">Odesílané</a>
+                                        </li>
+                                        <li>
+                                            <a href="#campains/type/FINISHED" style="padding-left: 3em; font-size: 0.9em" >Odeslané</a>
+                                        </li>
 
-                        </ul>
-                        <!-- /#side-menu -->
-                    </div>
-                    <!-- /.sidebar-collapse -->
-                </div>
-                <!-- /.navbar-static-side -->
-            </nav>
 
-            <div ng-view  id="page-wrapper">
+                                        </ul>
+                                        <!-- /#side-menu -->
+                                        </div>
+                                        <!-- /.sidebar-collapse -->
+                                        </div>
+                                        <!-- /.navbar-static-side -->
+                                        </nav>
 
-                <!-- /.row -->
-            </div>
-            <!-- /#page-wrapper -->
+                                        <div ng-view  id="page-wrapper">
 
-        </div>
-        <!-- /#wrapper -->
+                                            <!-- /.row -->
+                                        </div>
+                                        <!-- /#page-wrapper -->
 
-        <!-- Core Scripts - Include with every page -->
-        <script src="js/jquery-1.10.2.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+                                        </div>
+                                        <!-- /#wrapper -->
 
-        <!-- Page-Level Plugin Scripts - Dashboard -->
-        <script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
-        <script src="js/plugins/morris/morris.js"></script>
+                                        <!-- Core Scripts - Include with every page -->
+                                        <script src="js/jquery-1.10.2.js"></script>
+                                        <script src="js/bootstrap.min.js"></script>
+                                        <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
-        <!-- SB Admin Scripts - Include with every page -->
-        <script src="js/sb-admin.js"></script>
+                                        <!-- Page-Level Plugin Scripts - Dashboard -->
+                                        <script src="js/plugins/morris/raphael-2.1.0.min.js"></script>
+                                        <script src="js/plugins/morris/morris.js"></script>
+
+                                        <!-- SB Admin Scripts - Include with every page -->
+                                        <script src="js/sb-admin.js"></script>
 
 
 
 
 
 
-        <script src="js/angular.min.js"></script>
-        <script src="js/angular-route.min.js"></script>
-        <script src="js/angular-resource.min.js"></script>
-        <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
+                                        <script src="js/angular.min.js"></script>
+                                        <script src="js/angular-route.min.js"></script>
+                                        <script src="js/angular-resource.min.js"></script>
+                                        <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
 
-        <script src="js/massmailer.js"></script>
-        <script src="js/menu.js"></script>
-        <script src="js/datasource.js"></script>
-        <script src="js/campain.js"></script>
-        <script src="js/email.js"></script>
-        <script src="js/fileUpload.js"></script>
-        <script src="js/entityService.js"></script>
-        <script src="js/users.js"></script>
-        <script src="js/breadcrumb.js"></script>
-        <script src="js/ngdirectives.js"></script>
-        <script src="js/toastr.js"></script>
-        <script src="js/massmailer.js"></script>
+                                        <script src="js/massmailer.js"></script>
+                                        <script src="js/menu.js"></script>
+                                        <script src="js/datasource.js"></script>
+                                        <script src="js/campain.js"></script>
+                                        <script src="js/email.js"></script>
+                                        <script src="js/dashboard.js"></script>
+                                        <script src="js/fileUpload.js"></script>
+                                        <script src="js/entityService.js"></script>
+                                        <script src="js/users.js"></script>
+                                        <script src="js/breadcrumb.js"></script>
+                                        <script src="js/ngdirectives.js"></script>
+                                        <script src="js/toastr.js"></script>
+                                        <script src="js/massmailer.js"></script>
 
-    </body>
 
-</html>
+                                        <script src="js/ckeditor/ckeditor.js"></script>
+                                        </body>
+
+                                        </html>
