--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -129,6 +129,7 @@
                                         <script src="js/campain.js"></script>
                                         <script src="js/email.js"></script>
                                         <script src="js/dashboard.js"></script>
+                                                         <script src="js/stats.js"></script>
                                         <script src="js/fileUpload.js"></script>
                                         <script src="js/entityService.js"></script>
                                         <script src="js/users.js"></script>
