--- a/src/main/webapp/WEB-INF/ui/index.html
+++ b/src/main/webapp/WEB-INF/ui/index.html
@@ -83,6 +83,9 @@
                                             <a href="#campains/type/FINISHED" style="padding-left: 3em; font-size: 0.9em" >Odeslané</a>
                                         </li>
 
+             <li>
+                                            <a href="#stats" style="padding-left: 3em; font-size: 0.9em" >Statistiky</a>
+                                        </li>
 
                                         </ul>
                                         <!-- /#side-menu -->
